tdf#162724: use localized decimal separator in ImpCurrencyToString

Same as in ImpCvtNum

Change-Id: Icbaa237e944a39309b01fdb18e668d054ff61c60
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172693
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit a795fddafad69e8a7ce600352c7236b35539cebb)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172680
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>